--- a/footer.scss
+++ b/footer.scss
@@ -1,10 +1,10 @@
-@import './variables.scss';
+@use 'variables.scss';
 
 .footer {
   background-color: #00334d;
   border-top: 2px solid #000000; // or #1A224C ?
   color: #e7f7ff;
   font-size: 1.2rem;
-  padding: $base-space * 2;
+  padding: variables.$base-space * 2;
   text-align: center;
 }
