--- a/helper.scss
+++ b/helper.scss
@@ -1,4 +1,4 @@
-@import './variables.scss';
+@use 'variables.scss';
 
 .align-items-baseline {
   align-items: baseline;
@@ -29,11 +29,11 @@
 }
 
 .border-bottom-1 {
-  border-bottom: 1px solid $border-color;
+  border-bottom: 1px solid variables.$border-color;
 }
 
 .border-top-1 {
-  border-top: 1px solid $border-color;
+  border-top: 1px solid variables.$border-color;
 }
 
 .cursor-pointer {
@@ -65,7 +65,7 @@
 }
 
 .font-size-3 {
-  font-size: $font-size-3;
+  font-size: variables.$font-size-3;
 }
 
 .justify-content-center {
@@ -81,70 +81,70 @@
 }
 
 .margin-bottom-1 {
-  margin-bottom: $space-unit-1 !important;
+  margin-bottom: variables.$space-unit-1 !important;
 }
 
 .margin-bottom-2 {
-  margin-bottom: $space-unit-2 !important;
+  margin-bottom: variables.$space-unit-2 !important;
 }
 
 .margin-bottom-3 {
-  margin-bottom: $space-unit-3 !important;
+  margin-bottom: variables.$space-unit-3 !important;
 }
 
 .margin-bottom-4 {
-  margin-bottom: $space-unit-4 !important;
+  margin-bottom: variables.$space-unit-4 !important;
 }
 
 .margin-horizontal-1 {
-  margin-left: $space-unit-1 !important;
-  margin-right: $space-unit-1 !important;
+  margin-left: variables.$space-unit-1 !important;
+  margin-right: variables.$space-unit-1 !important;
 }
 
 .margin-horizontal-2 {
-  margin-left: $space-unit-2 !important;
-  margin-right: $space-unit-2 !important;
+  margin-left: variables.$space-unit-2 !important;
+  margin-right: variables.$space-unit-2 !important;
 }
 
 .margin-left-1 {
-  margin-left: $space-unit-1 !important;
+  margin-left: variables.$space-unit-1 !important;
 }
 
 .margin-left-2 {
-  margin-left: $space-unit-2 !important;
+  margin-left: variables.$space-unit-2 !important;
 }
 
 .margin-left-3 {
-  margin-left: $space-unit-3 !important;
+  margin-left: variables.$space-unit-3 !important;
 }
 
 .margin-right-1 {
-  margin-right: $space-unit-1 !important;
+  margin-right: variables.$space-unit-1 !important;
 }
 
 .margin-right-2 {
-  margin-right: $space-unit-2 !important;
+  margin-right: variables.$space-unit-2 !important;
 }
 
 .margin-right-3 {
-  margin-right: $space-unit-3 !important;
+  margin-right: variables.$space-unit-3 !important;
 }
 
 .margin-top-1 {
-  margin-top: $space-unit-1 !important;
+  margin-top: variables.$space-unit-1 !important;
 }
 
 .margin-top-2 {
-  margin-top: $space-unit-2 !important;
+  margin-top: variables.$space-unit-2 !important;
 }
 
 .margin-top-3 {
-  margin-top: $space-unit-3 !important;
+  margin-top: variables.$space-unit-3 !important;
 }
 
 .margin-vertical-2 {
-  margin-bottom: $space-unit-2 !important;
-  margin-top: $space-unit-2 !important;
+  margin-bottom: variables.$space-unit-2 !important;
+  margin-top: variables.$space-unit-2 !important;
 }
 
 .margin-zero-auto {
@@ -164,20 +164,20 @@
 }
 
 .padding-3 {
-  padding: $space-unit-3;
+  padding: variables.$space-unit-3;
 }
 
 .padding-bottom-1 {
-  padding-bottom: $space-unit-1;
+  padding-bottom: variables.$space-unit-1;
 }
 
 .padding-bottom-3 {
-  padding-bottom: $space-unit-3 !important;
+  padding-bottom: variables.$space-unit-3 !important;
 }
 
 .padding-horizontal-2 {
-  padding-left: $space-unit-2 !important;
-  padding-right: $space-unit-2 !important;
+  padding-left: variables.$space-unit-2 !important;
+  padding-right: variables.$space-unit-2 !important;
 }
 
 .padding-horizontal-md-0 {
@@ -188,16 +188,16 @@
 }
 
 .padding-top-2 {
-  padding-top: $space-unit-2 !important;
+  padding-top: variables.$space-unit-2 !important;
 }
 
 .padding-top-3 {
-  padding-top: $space-unit-3 !important;
+  padding-top: variables.$space-unit-3 !important;
 }
 
 .padding-vertical-2 {
-  padding-bottom: $space-unit-2 !important;
-  padding-top: $space-unit-2 !important;
+  padding-bottom: variables.$space-unit-2 !important;
+  padding-top: variables.$space-unit-2 !important;
 }
 
 .position-absolute {
