--- a/variables.scss
+++ b/variables.scss
@@ -17,9 +17,12 @@ $font-size-5: 28px;
 $border-color: #dddddd;
 $border-radius: 4px;
 $box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+$background-color-info: #d1ecf1;
 $background-color-success: #d4edda;
 $background-color-warning: #fff3cd;
+$border-color-info: #bee5eb;
 $color-danger: #993300;
+$text-color-info: #0c5460;
 $text-color-success: #155724;
 $text-color-warning: #664d03;
 $dark: #000a10;
