--- a/helper.scss
+++ b/helper.scss
@@ -68,8 +68,16 @@
   font-size: variables.$font-size-3;
 }
 
+.font-weight-normal {
+  font-weight: normal;
+}
+
 .justify-content-center {
   justify-content: center;
+}
+
+.justify-content-flex-end {
+  justify-content: flex-end;
 }
 
 .justify-content-space-between {
@@ -218,6 +226,10 @@
 
 .text-align-center {
   text-align: center;
+}
+
+.text-align-right {
+  text-align: right;
 }
 
 .text-overflow-ellipsis {
