--- a/helper.scss
+++ b/helper.scss
@@ -236,6 +236,10 @@
   right: 0;
 }
 
+.right-4px {
+  right: 4px;
+}
+
 .right-8px {
   right: 8px;
 }
@@ -262,6 +266,10 @@
 
 .top-0 {
   top: 0;
+}
+
+.top-4px {
+  top: 4px;
 }
 
 .top-8px {
